Rewrote build.xml to download solr.war and winstone.jar etc.
* No need for opensextant.home or jetty.home or solr.war committed to source control; it's self-sufficient by downloading what it needs
* Doesn't use EmbeddedSolrServer -- no need; just use Solr's csv update
* Don't unpack solr4-conf.zip; don't need those files